Correction version mobile

--- a/Style.css
+++ b/Style.css
@@ -1,14 +1,23 @@
 /* _______________éléments principaux________________ */
 
+html
+{
+    height: 100%;
+}
+
 body {
     display: flex;
     justify-content: center;
     font-family: 'Raleway', 'arial', sans-serif;
     color: #181818;
+    height: 100%;
 }
 
 #bloc_page {
     max-width: 1440px;
+    position: relative;
+    height: 100%;
+    min-height: 100%;
 }
 
 .width95 {
@@ -62,19 +71,33 @@ nav a {
     color: #0065FC;
     text-decoration: none;
     margin-right: 60px;
+
+}
+
+#black {
+    color: black;
+}
+
+#border_top
+{
+     border-top: solid;
+    border-top-color: #0065FC;
+    width: auto;
+    height: 60px;
+    padding-top: 20px;
 }
 
 #no_margin {
     margin: 0px;
 }
 
-nav a:hover {
+/*nav a:hover {
     border-top: solid;
     border-top-color: #0065FC;
     width: auto;
     height: 60px;
     padding-top: 20px;
-}
+}*/
 
 nav a:checked {
     color: black;
@@ -241,7 +264,7 @@ nav a:checked {
 #hebergement {
     display: flex;
     justify-content: space-between;
-    height: 32%;
+    height: 93%;
 }
 
 #bloc {
@@ -378,15 +401,14 @@ aside h2 {
 }
 
 /*__________Activite___________*/
-#activite a
-{
+#activite a {
     text-decoration: none;
     color: black;
 }
 
 
 #activite {
-    height: 25%
+    height: 63%
 }
 
 
@@ -540,6 +562,10 @@ footer {
     display: flex;
     background-color: #F2F2F2;
     margin-top: 5em;
+    position: absolute;
+    /*bottom: opx;*/
+    width: 100%;
+    
 }
 
 footer a {
@@ -995,12 +1021,11 @@ footer ul {
         align-items: center;
         padding-left: 51px;
     }
-    
-    #activite a
-{
-    text-decoration: none;
-    color: black;
-}
+
+    #activite a {
+        text-decoration: none;
+        color: black;
+    }
 
 
     #Activite {
@@ -1184,10 +1209,10 @@ footer ul {
         text-decoration: none;
         color: black;
     }
-    
+
     footer ul {
-    margin-left: 60px;
-}
+        margin-left: 60px;
+    }
 }
 
 
@@ -1195,7 +1220,7 @@ footer ul {
 
 @media screen and (min-width:768px) and (max-width:768px) {
 
-    /* _______________éléments principaux________________*/ 
+    /* _______________éléments principaux________________*/
 
     body {
         display: flex;
@@ -1216,7 +1241,7 @@ footer ul {
         list-style-type: none;
     }
 
-    /* _________________header_________________*/ 
+    /* _________________header_________________*/
 
     #logo {
         width: 110px;
@@ -1281,7 +1306,7 @@ footer ul {
 
 
 
-    /* _______________fonction recherche________________*/ 
+    /* _______________fonction recherche________________*/
 
     #champ_recherche {
         position: absolute;
@@ -1584,12 +1609,11 @@ footer ul {
     #activite {
         height: 19%
     }
-    
-    #activite a
-{
-    text-decoration: none;
-    color: black;
-}
+
+    #activite a {
+        text-decoration: none;
+        color: black;
+    }
 
 
     #Activite {
